# escosol-land-monitoring

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
ae-labeling/: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
ae-labeling/ae_labeling/: asgi.py  settings.py  urls.py  wsgi.py
ae-labeling/app/: admin.py  models.py  urls.py  views.py
ae-labeling/app/management/commands/: cleanup_stale_locks.py  import_llm_results_parquet.py
ae-labeling/app/migrations/: 0001_initial.py  0002_alter_document_pdf_name_alter_document_validated_at.py  0003_alter_document_validated_at.py  0004_document_pdf_text_raw.py
ae-labeling/app/static/css/: admin.css  labeling.css  style.css
ae-labeling/app/static/js/: labeling.js
ae-labeling/app/templates/: base.html  dashboard.html  label_widget.html  labeling.html  login.html
ae-labeling/app/templatetags/: labeling_tags.py
ae-scraping/: combine-data.py  config.py  full_scraping.py  mrae_archive_pdf_downloader.py  mrae_scraping.py  utils.py
ae-scraping/archive/: bretagne.py  guadeloupe.py  guyane.py  nord_pas_de_calais.py  side.py  somme.py  utils.py
ae-scraping/dl-pdfs/: README_scraping.md  dl_archives_guadeloupe.py  download_pdfs.py  extract_links.ipynb  extract_links.py  extract_relevant_pdf_links.py  extract_year_links.py  scraping_ae.md
ae-scraping/mrae/: README_scraping.md  __init__.py  extract_relevant_pdf_links.py  extract_year_links.py  urls.py
ml-classification/: dataset_creation.py  training_hg.py  utils.py
ml_classification/: .gitignore  README.md  dataset_creation.py  utils.py
ocs/: pyproject.toml
ocs/data_analysis/: analysis.py
(+26 files in other folders)
