[project]
name = "escosol-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pymupdf==1.26.6",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "sentencepiece>=0.2.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-execute-time>=3.3.0",
    "jupyterlab-lsp>=5.2.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.14.14",
]
