[project]
name = "ae-labeling"
version = "0.1.0"
description = "Web application to validate LLM predictions for AE PDFs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.13.0",
    "gunicorn>=25.1.0",
    "polars>=1.38.0",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = ["pytest>=7.0", "black>=23.0", "django-debug-toolbar>=6.2.0"]
