[project]
name = "escosol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.3",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "marimo[recommended]>=0.19.2",
    "py7zr>=1.1.0",
    "tqdm>=4.67.1",
]
